# crud_project

./: README.md
crud-backend/: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
crud-backend/crud_backend/: database.py  main.py
crud-backend/crud_backend/models/: __init__.py  clients.py  projects.py  tasks.py
crud-backend/crud_backend/routes/: clients.py  projects.py  tasks.py
crud-backend/crud_backend/schemas/: clients.py  projects.py  tasks.py
crud-backend/migrations/: env.py
crud-backend/migrations/versions/: 53fc9cf7826f_create_tasks_table.py  9eda85a6bfaa_create_tables.py  e9f864763487_update_tasks_table.py
crud-backend/tests/: conftest.py  test_clients.py  test_db.py  test_main.py  test_projects.py  test_tasks.py
crud-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
crud-frontend/src/: App.vue
crud-frontend/src/components/: Board.vue  BoardList.vue  Card.vue  CardList.vue  Navbar.vue
crud-frontend/src/pages/: index.vue
crud-frontend/src/pages/board/: [id].vue
crud-frontend/src/plugins/: axios.js  index.js
